@@ -1,3 +1,8 @@
+2019-10-25 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  Fix handling of rematerialized pointers to the stack in y.
+
 2019-10-24 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/peeph.def,
